# xalpha-intel

./: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/services/: ai_analysis.py  fund_data.py  fund_search.py  group_analysis.py  metrics.py  saved_groups.py  sentiment.py
frontend/: index.html  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
tests/: test_ai_analysis.py  test_api.py  test_fund_search.py  test_group_analysis.py  test_metrics.py  test_saved_groups.py  test_sentiment.py
