[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xalpha-intel"
version = "0.1.0"
description = "FastAPI and React service layer for xalpha investment intelligence"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.8",
  "pandas>=1.5,<2.0",
  "numpy<2.0",
  "xalpha>=0.12.3",
  "python-dotenv>=1.0",
  "sqlalchemy>=1.4,<2.0",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
